fixed alignment of office location #6

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -8,7 +8,7 @@ header {
   /* background-color: green; */
   width: 100%;
   position: fixed;
-  z-index: 10;
+  z-index: 1000;
   transition: all 0.5s ease-in-out;
 }
 .title {
